--- a/mp3/public/partials/newuser.html
+++ b/mp3/public/partials/newuser.html
@@ -1,12 +1,26 @@
-<h1>Gallery</h1>
-<div class="gallery">
-    <div class="row">
-        <div class="col-md-2">
-            <!--Sidebar content-->
-            <a class = "button" href="#/gallery">Gallery</a>
-            <a class = "button" href="#/list">List</a>
-<section>
-            Choose genre:
+<a class = "button" href="#/home">Home</a>
+<a class = "button" href="#/addRestaurant">Add Restaurant</a>
+<a class = "button" href="#/viewRestaurants">View Restaurants</a>
+<a class = "button" href="#/reviews">Reviews</a>
+<a class = "button" href="#/search">Search</a>
+<a class = "button" href="#/login">Login</a>
+<a class = "button" href="#/newuser">Create an account</a>
+
+<h1>Create an account!</h1>
+
+					<label>Full name
+                        <input type="text" placeholder="Full name">
+                    </label>
+                    <label>Username
+                        <input type="text" placeholder="Username">
+                    </label>
+                    <label>Password
+                        <input type="text" placeholder="Password">
+                    </label>
+                    <label>Zip Code
+                        <input type="text" placeholder="Zip Code">
+                    </label>
+                    Choose favorite foodstyle:
             <select ng-model="orderProp">
                 <option value="">All</option>
                 <option value="Action">Action</option>
@@ -32,20 +46,4 @@
                 <option value="Western">Western</option>
 
             </select>
-
-</section>
-        </div>
-        <div class="col-md-10">
-            <!--Body content-->
-
-            <ul class="movies">
-                    <li ng-repeat="movie in movies | filter:orderProp" class="thumbnail">
-                        <h3 class = "movieTitle"><a href="#/list/{{movie.rank}}" class="thumb"><img ng-src="./data/images/{{ movie.imdbID }}.jpg" alt="{{movie.title}}"></a></h3>
-                    </li>
-            </ul>
-
-        </div>
-    </div>
-</div>
-
-
+                    <p><a type="submit" class="button expanded">Log In</a></p>
